# finint-suspicious-transactions-analysis-lab

./: .gitignore  README.md  ReadME01.md  finint_suspicious_transactions_analysis_lab.docx  pyproject.toml  requirements.txt
scripts/: run_lab.py
src/finint_lab/: __init__.py  analyze.py  cli.py  generate_data.py  report.py
